[project]
name = "movie"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "heejin131", email = "journeyjean131@gmail.com"},
]
dependencies = ["requests>=2.32.3"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
juypter = [
    "lab>=8.4",
]
